# MMFA

./: LICENSE  README.md  load_data.py  plot_attn.py  pyproject.toml  speakernet.py  train.py
baseline/: WavLM.py  spk_encoder.py
optimizer/: adam.py  adamw.py  sgd.py
scheduler/: coslr.py  cyclr.py  steplr.py
yaml/: baseline_avg_mask70_softmax.yaml
