[tool.poetry]
name = "sv-emotional-speech-mtl"
version = "0.1.0"
description = ""
authors = ["LUJ0618 <uijong2201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
matplotlib = "3.3.3"
librosa = "^0.10.2.post1"
tqdm = "^4.66.5"
cython = "^3.0.11"
einops = "^0.8.0"
inflect = "^7.4.0"
unidecode = "^1.3.8"
tensorboard = "^2.12.2"
pillow = "9.5.0"
torchsummary = "^1.5.1"
speechbrain = "^1.0.2"
torchinfo = "^1.8.0"
seaborn = "0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
